# projectlighthouse-io

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  initial_db_planning.sql  local.toml  migrate.sh  populate.sh  psql.sh  roadmap  test.toml
.do/: app.yml
.github/workflows/: e2e.yml  test.yml
.sqlx/: query-37bd801ca012e4e9e25f6f14c6b27f08b6ab12a29de74e9d22547014a8160218.json  query-37ff3ce44cbd5f1a401147511436a182fee40f919e1de3a31c1ef139f1775472.json  query-3cf8e4b5816302b2e38abe023a13241cd54922dfd0dc6959c2c0dbe6fe97ec4f.json  query-5787cb5daa2a450a1435c39fdf35b1d7dc67c17429fdcdb54fd3cd41cbfea33f.json  query-8f211d9cdb38a5b2ce739a57b189e6e141ad9c19ab7c0cae5eb679965d44a699.json  query-99f8abdf0ae8f8dd0393f0d8a2cb8f868f29a4ce0ce0a7b910d5570bc2d23207.json  query-9b1c897682a1165f647d95d582ced398dae8d125dc81f96754dcb86dba791d2b.json  query-a1a74a197cf6944fa379d5b5a8edea7d57b3a27d14781d5c32558eee1c2ceb4d.json  query-b6261f012ee57730897d98d5bd3bb4d45bd3475ca12df35ac98706fe4ee9f2be.json  query-e9de5c6f836bc384c742aac49dc9618d315c671d21e9fa7586c55338da6a4dd6.json
config/: base.toml  base.yml  local.yml
fake/: 0001_populate_course_related_items.sql  0002_add_meta_description_to_courses.sql  0003_add_lessons.sql  0004_restructure_courses_and_lessons.sql  0005_add_thumbnail_to_courses.sql  courses.sql
flare/: package.json
flare/src/: app.css  app.html  globals.css  syntax-theme.json  typography.css
flare/src/lib/: api.ts  api_response_types.ts  fake.ts  helpers.ts  types.ts
flare/src/lib/components/: Button.svelte  CoursePageAside.svelte  CoursePageTopNavbar.svelte  LeftSidebar.svelte  TopBarBreadcrumb.svelte
flare/src/routes/: +layout.svelte  +page.svelte  +page.ts
flare/src/routes/c/[slug]/: +layout.server.ts  +layout.svelte  +layout.ts  +page.svelte  +page.ts
flare/src/routes/c/[slug]/learn/[lesson_id]/: +page.svelte  +page.ts
flare/src/routes/resources/: +page.svelte
migrations/: 20250528193040_create_users_table.sql  20250528193041_create_courses_table.sql  20250528193042_make_modules_id_nullable.sql
src/: config.rs  lib.rs  main.rs
src/api/: category.rs  header.rs  mod.rs  server.rs  tag.rs
src/course/: courses.rs
src/ohara/: api.rs  courses.rs  lessons.rs  mod.rs  modules.rs  responses_structures.rs
src/service/: user.rs
src/storer/: README.md  category.rs  course.rs  lookup.rs  mod.rs  tag.rs
tests/e2e/: courses.rs  health.rs  main.rs  setup.rs
