[[bin]]
path = "src/main.rs"
name = "lighthouseio"

[lib]
path = "src/lib.rs"
name = "lighthouseio"

[package]
name = "lighthouseio"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
anyhow = "1.0.98"
config = "0.15.11"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde-aux = "4.7.0"
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
toml = "0.8.22"


[dev-dependencies]
tokio = { version = "1.45.1", features = ["rt", "macros"] }
reqwest = { version = "0.12.18", features = ["json"] }
