[[bin]]
path = "src/main.rs"
name = "lighthouseio"

[lib]
path = "src/lib.rs"
name = "lighthouseio"

[package]
name = "lighthouseio"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
anyhow = "1.0.98"
argon2 = "0.5.3"
config = "0.15.11"
log = "0.4.27"
secrecy = "0.10.3"
serde = { version = "1.0.219", features = ["derive"] }
serde-aux = "4.7.0"
serde_json = "1.0.140"
sqlx = { version = "0.8.6", default-features = false, features = [
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "runtime-tokio-rustls",
] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
toml = "0.8.22"
uuid = { version = "1.17.0", features = ["v4"] }


[dev-dependencies]
tokio = { version = "1.45.1", features = ["rt", "macros"] }
reqwest = { version = "0.12.18", features = ["json"] }
